Bugfix: slow down caused by cut/copying selection

Creating documents on fly with resource storage registered is expensive.

BUG:446091